service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mon-backend
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: mon-backend
  type: NodePort
